--- a/cloudcannon.config.yml
+++ b/cloudcannon.config.yml
@@ -3,40 +3,27 @@ collections_config:
     path: src/data
     output: false
     icon: settings
-    disable_add: true
-    disable_remove: true
-    schemas:
-      footer:
-        path: footer.json
-        name: Footer Settings
-        _inputs:
-          logo:
-            type: image
-            label: Footer Logo
-            comment: Upload or select the footer logo
-            options:
-              uploads_dir: "/images"
-        _select_data:
-          logo:
-            values: data.image_files
     items:
       - name: footer
         path: footer.json
         parser: json
+        _inputs:
+          logo:
+            type: image
+            label: Footer Logo
+            options:
+              uploads_dir: "public/images"
 
 paths:
   static: public
   uploads: public/uploads
   images: public/images
 
-# Add image input configuration
 _inputs:
   image:
     type: image
-    comment: Select or upload an image
   src:
     type: image
-    comment: Select or upload an image file
 
 timezone: Africa/Cairo
 markdown:
